simple post api route request

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -114,3 +114,11 @@
     flex-direction: column;
   }
 }
+
+.sideMenu {
+  padding: 1rem;
+  margin: 1rem;
+  font-weight: bold;
+  background-color: lightgreen;
+  border: 3px dashed darkgreen ;
+}
