--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
+nav > a {
   color: inherit;
   text-decoration: none;
   padding: 1rem;
